@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <config xmlns="http://project.hasor.net/hasor/schema/main">
-
-	<hasor debug="false">
-		<!-- 包扫描覆盖范围，逗号间隔 -->
+	<!-- 对 Hasor 的配置 -->
+	<hasor>
 		<loadPackages>net.hasor.*</loadPackages>
-		<!-- 默认要装载的模块 -->
-		<modules loadModule="true">
-		</modules>
+		<startup>net.test.hasor.web.MyModule</startup>
 	</hasor>
 
-
-
-	<!-- Hasor 默认配置文件 -->
+	<!-- Demo程序用到的配置 -->
 	<myName>ZZZ</myName>
 </config>
