@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<config xmlns="http://project.hasor.net/hasor/schema/main">
+	<hasor.startup>net.test.hasor.core._05_plugins.mods.OnLifeModule</hasor.startup>
+</config>
