@@ -1,4 +1,6 @@
 ﻿===== Hasor-Core v2.1.0
+* 新增:
+    01.新增一个插件，简化“modules.module”的配置。
 * 改进:
     01.修改ShutdownHook钩子。在start时注册它、当shutdown时解除注册。
     02.增加Environment接口的包装器。
